Revert "Merged in 510_INTRD-1392 (pull request #809)"
This reverts commit da72eeb2ee46c477ce83b13feadd55815752adb7, reversing
changes made to 4556f2f2fbff045a467c0dc777b3e1fadc948081.

# Conflicts:
#	opencell-admin/ejbs/src/main/java/org/meveo/admin/async/SepaDirectDebitAsync.java
#	opencell-admin/ejbs/src/main/java/org/meveo/admin/job/SepaDirectDebitJobBean.java
#	opencell-admin/ejbs/src/main/java/org/meveo/admin/job/UnitSepaDirectDebitJobBean.java
#	opencell-admin/ejbs/src/main/java/org/meveo/service/payments/impl/DDRequestLOTService.java